beginning to develop application

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,9 +1,20 @@
-<div class="hero-unit">
-  <h1>'Allo, 'Allo!</h1>
-  <p>You now have</p>
-  <ul>
-      <li ng-repeat="thing in awesomeThings">{{thing}}</li>
-  </ul>
-  <p>installed.</p>
-  <h3>Enjoy coding! - Yeoman</h3>
-</div>
+<header>
+    <h1>Logo</h1>
+    <nav>
+        <ul class="menu">
+            <li>Save</li>
+        </ul>
+    </nav>
+</header>
+
+<br/><br/>
+
+<ng-include src="'views/elements-list.html'"></ng-include>
+
+<section>
+
+</section>
+
+<footer>
+    bottom
+</footer>
