--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -178,3 +178,28 @@ h6 {
     font-size: 1em;
 }
 
+
+/** LIST */
+
+.list-title {
+    h5 {
+        display: inline-block;
+    }
+}
+
+.list {
+    position: relative;
+    .list-header {
+        position: relative;
+    }
+    .list-body {
+        position: absolute;
+        top: 30px;
+        left: 0px;
+        right: 0px;
+        bottom: 0px;
+        display: block;
+        overflow-y: scroll;
+    }
+}
+
