--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -1,23 +1,77 @@
-<section id="elements-list" ng-controller="ElementsListCtrl">
-    <h5>Events</h5>
-    <div>
-        <ul>
-            <li>Event Name</li>
-        </ul>
-    </div>
+<section id="elements-list" style="height:500px; width:200px;" ng-controller="ElementsListCtrl">
+    <div class="section-inner">
 
-    <h5>Types</h5>
-    <div>
-        <ul>
-            <li>Type Name</li>
-        </ul>
-    </div>
+        <div class="list-title">
+            <h5>Events</h5>
+            <button>hi</button>
+        </div>
+        <div class="list">
+            <div class="list-header">hi there</div>
+            <div class="list-body">
+                <ul>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li><li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li><li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
+                    <li>Event Name</li>
 
-    <h5>Aspects</h5>
-    <div>
-        <ul>
-            <li>Aspect Name</li>
-        </ul>
-    </div>
+                </ul>
+            </div>
+        </div>
 
+        <div class="list-title">
+            <h5>Types</h5>
+            <button>hi</button>
+        </div>
+        <div class="list">
+            <div class="list-header">hi there</div>
+            <div class="list-body">
+                <ul>
+                    <li>Type Name</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="list-title">
+            <h5>Aspects</h5>
+            <button>hi</button>
+        </div>
+        <div class="list">
+            <div class="list-header">hi there</div>
+            <div class="list-body">
+                <ul>
+                    <li>Aspect Name</li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
 </section>
