--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -1,5 +1,10 @@
-<section id="elements-list" style="height:500px; width:200px;" ng-controller="ElementsListCtrl">
-    <div class="section-inner">
+<section id="elements-list" ng-controller="ElementsListCtrl">
+
+    <div class="section-header">
+
+    </div>
+
+    <div class="section-body">
 
         <div class="list-title">
             <h5>Events</h5>
