--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,11 +9,13 @@
 
 <br/><br/>
 
-<ng-include src="'views/elements-list.html'"></ng-include>
+<div id="upper-container">
+    <ng-include src="'views/elements-list.html'"></ng-include>
 
-<section>
+    <ng-include src="'views/edit-screen.html'"></ng-include>
+</div>
 
-</section>
+<ng-include src="'views/timeline.html'"></ng-include>
 
 <footer>
     bottom
