--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -33,7 +33,7 @@ footer,header,hgroup,menu,nav,section {
     display:block;
 }
 
-nav ul {
+ul {
     list-style:none;
 }
 
@@ -108,12 +108,20 @@ input, select {
          url('fonts/raleway_thin-webfont.svg#ralewaythin') format('svg');
     font-weight: normal;
     font-style: normal;
+}
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('/bower_components/font-awesome/font/fontawesome-webfont.eot?v=3.2.1');
+  src: url('/bower_components/font-awesome/font/fontawesome-webfont.eot?#iefix&v=3.2.1') format('embedded-opentype'), url('/bower_components/font-awesome/font/fontawesome-webfont.woff?v=3.2.1') format('woff'), url('/bower_components/font-awesome/font/fontawesome-webfont.ttf?v=3.2.1') format('truetype'), url('/bower_components/font-awesome/font/fontawesome-webfont.svg#fontawesomeregular?v=3.2.1') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 /** VARIABLES */
 
 @margin-horizontal: 20px;
+@footer-height: 50px;
 
 @color-1: #dddddd;
 
@@ -151,7 +159,7 @@ footer {
     right: 0px;
     background-color: @color-1;
     padding: 0 @margin-horizontal;
-    height: 50px;
+    height: @footer-height;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -193,6 +201,7 @@ h6 {
     width: 200px;
 
     .list-title {
+        cursor: pointer;
         h5 {
             display: inline-block;
         }
@@ -200,9 +209,13 @@ h6 {
 
     .list {
         position: relative;
+        font-size: 0.9em;
+
         .list-header {
             position: relative;
+            border-bottom: 1px solid @color-1;
         }
+
         .list-body {
             position: absolute;
             top: 30px;
@@ -212,8 +225,83 @@ h6 {
             display: block;
             overflow-y: scroll;
         }
+        
+        li {
+            display: block;
+            position: relative;
+            color: #aaa;
+            cursor: pointer;
+            padding: 5px 0px;
+
+            &.selected, &.selected:hover {
+                color: #fff;
+                background-color: #666;
+            }
+
+            &.selected-secondary {
+                color: #666;
+            }
+
+            &:hover {
+                color: #fff;
+                background-color: #999;
+            }
+        }
+
+        li, .list-header {
+            & > div {
+                display: table-cell;
+            }
+        }
+    }
+    
+    #list-events {
+    }
+    
+    #list-types {
+        li, .list-header {
+            & > div {
+                &:first-child {
+                    font-family: 'FontAwesome';
+                    width: 30px;
+                    text-align: center;
+                }
+            }
+        }
+    }
+    
+    #list-aspects {
+        li, .list-header {
+            & > div {
+                &:nth-child(1) {
+                    font-family: 'FontAwesome';
+                    width: 30px;
+                    text-align: center;
+                }
+
+                &:nth-child(2) {
+                    font-family: 'FontAwesome';
+                    width: 30px;
+                    text-align: center;
+                    display: none;
+                }
+            }
+        }
+        
+        li:hover, li.selected {
+            & > div {
+                &:nth-child(1) {
+                    display:none;
+                }
+                &:nth-child(2) {
+                    display: table-cell;
+                }
+            }
+        }
     }
 }
+
+/** */
 
 #edit-screen {
     position: absolute;
@@ -236,6 +324,6 @@ h6 {
     top: 60%;
     left: 0;
     right: 0;
-    bottom: 50px;
+    bottom: @footer-height;
 }
 
