different includes for edit screen

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
 <div id="upper-container">
     <ng-include src="'views/elements-list.html'"></ng-include>
 
-    <ng-include src="'views/edit-screen.html'"></ng-include>
+    <ng-include src="selectEditScreen()"></ng-include>
 </div>
 
 <ng-include src="'views/timeline.html'"></ng-include>
