different edit screens

--- a/app/views/edit-timeline.html
+++ b/app/views/edit-timeline.html
@@ -1,8 +1,9 @@
-<section id="edit-screen" ng-controller="EditScreenCtrl">
+<section id="edit-timeline" class="edit-screen" ng-controller="EditTimelineCtrl">
     <div class="section-header">
-        <h3>hello</h3>
+        <h3>Timeline</h3>
     </div>
     <div class="section-body">
         hello
     </div>
+    <a href="javascript: void(0);" ng-click="switchSelectedElement()">switch</a>
 </section>
