--- a/app/views/edit-timeline.html
+++ b/app/views/edit-timeline.html
@@ -1,9 +1,8 @@
 <section id="edit-timeline" class="edit-screen" ng-controller="EditTimelineCtrl">
     <div class="section-header">
-        <h3>Timeline</h3>
+        <h3></h3>
     </div>
     <div class="section-body">
-        hello
+        Edit timeline
     </div>
-    <a href="javascript: void(0);" ng-click="switchSelectedElement()">switch</a>
 </section>
