--- a/app/views/edit-type.html
+++ b/app/views/edit-type.html
@@ -1,8 +1,8 @@
 <section id="edit-type" class="edit-screen" ng-controller="EditTypeCtrl">
     <div class="section-header">
-        <h3>hello</h3>
+        <h3>{{type.name}}</h3>
     </div>
     <div class="section-body">
-        hello
+        Edit type
     </div>
 </section>
