begin working on edit screens

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -191,6 +191,20 @@ h6 {
     font-size: 1em;
 }
 
+.icon {
+    font-family: 'FontAwesome';
+    display: inline-block;
+    margin-right: 0.5em;
+}
+
+.section-header {
+    h3 {
+        display: inline-block;
+    }
+    .icon {
+        font-size: 1.3em;
+    }
+}
 
 /** LIST */
 #elements-list {
