--- a/app/views/edit-type.html
+++ b/app/views/edit-type.html
@@ -1,8 +1,20 @@
 <section id="edit-type" class="edit-screen" ng-controller="EditTypeCtrl">
     <div class="section-header">
+        <div class="icon" ng-bind-html-unsafe="type.icon"></div>
         <h3>{{type.name}}</h3>
     </div>
     <div class="section-body">
-        Edit type
+        <div ng-repeat="field in type.fields">
+            <label for="field-name-{{$index}}">Field</label>
+            <input type="text" id="field-name-{{$index}}" ng-model="field.name">
+
+            <label for="field-type-{{$index}}">Field Type</label>
+            <select id="field-type-{{$index}}"></select>
+
+            <label for="default-text-{{$index}}">Default Text</label>
+            <input type="text" id="default-text-{{$index}}" ng-model="field.defaultText">
+        </div>
+        
+        <a href="javascript: void(0);" ng-click="addField()">Add Field</a>
     </div>
 </section>
