initial inclusion of drag-n-drop

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -206,6 +206,14 @@ h6 {
     }
 }
 
+.dragging {
+    opacity: 0.5;
+}
+
+.drag-over {
+    background: #666;
+}
+
 /** LIST */
 #elements-list {
     position: absolute;
