--- a/app/views/edit-timeline.html
+++ b/app/views/edit-timeline.html
@@ -2,7 +2,7 @@
     <div class="section-header">
         <h3></h3>
     </div>
-    <div class="section-body">
+    <div class="section-body" yg-drop-target>
         Edit timeline
     </div>
 </section>
