--- a/app/views/edit-event.html
+++ b/app/views/edit-event.html
@@ -2,7 +2,7 @@
     <div class="section-header">
         <h3>{{event.name}}</h3>
     </div>
-    <div class="section-body">
+    <div class="section-body" yg-drop-target data-yg-drop-accept=".aspect" yg-drop-callback="addAspect">
         Edit Event
     </div>
 </section>
