--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -17,7 +17,7 @@
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="event in events" ng-class="{selected: isSelected(event), 'selected-secondary': isSelectedSecondary(event)}" ng-click="selectElement(event)" draggable="true" yg-draggable>
+                    <li ng-repeat="event in events" class="event" ng-class="{selected: isSelected(event), 'selected-secondary': isSelectedSecondary(event)}" ng-click="selectElement(event)" draggable="true" yg-draggable data-yg-drag-id="{{event.id}}">
                         {{event.name}}
                     </li>
                 </ul>
@@ -35,7 +35,7 @@
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="type in types" ng-class="{selected: isSelected(type), 'selected-secondary': isSelectedSecondary(type)}" ng-click="selectElement(type)" draggable="true" yg-draggable>
+                    <li ng-repeat="type in types" class="type" ng-class="{selected: isSelected(type), 'selected-secondary': isSelectedSecondary(type)}" ng-click="selectElement(type)" draggable="true" yg-draggable data-yg-drag-id="{{type.id}}">
                         <div ng-bind-html-unsafe="type.icon"></div>
                         <div>{{type.name}}</div>
                     </li>
@@ -55,7 +55,7 @@
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="aspect in aspects" ng-class="{selected: isSelected(aspect), 'selected-secondary': isSelectedSecondary(aspect)}" ng-click="selectElement(aspect)" draggable="true" yg-draggable>
+                    <li ng-repeat="aspect in aspects" class="aspect" ng-class="{selected: isSelected(aspect), 'selected-secondary': isSelectedSecondary(aspect)}" ng-click="selectElement(aspect)" draggable="true" yg-draggable data-yg-drag-id="{{aspect.id}}">
                         <div ng-bind-html-unsafe="aspect.icon"></div>
                         <div ng-bind-html-unsafe="aspect.icon" ng-style="{'color': aspect.color}"></div>
                         <div>{{aspect.name}}</div>
