--- a/app/views/edit-aspect.html
+++ b/app/views/edit-aspect.html
@@ -3,7 +3,7 @@
         <div class="icon" ng-bind-html-unsafe="aspect.icon" ng-style="{'color': aspect.color}"></div>
         <h3>{{aspect.name}}</h3>
     </div>
-    <div class="section-body" yg-drop-target data-yg-drop-accept=".event" yg-drop-callback="addEvent">
+    <yg-drop-target yg-drop-callback="addEvent" data-yg-drop-accept=".event" class="section-body">
         Edit Aspect
-    </div>
+    </yg-drop-target>
 </section>
