field types for aspects

--- a/app/views/edit-aspect.html
+++ b/app/views/edit-aspect.html
@@ -9,7 +9,14 @@
         </div>
 
         <div ng-repeat="field in aspect.getType().fields">
-            <label for="">{{field.name}}</label> {{field.type}}
+            <label for="{{getFieldId(field)}}">{{field.name}}</label>
+            <ng-switch on="field.type">
+                <input ng-switch-when="text" type="text" ng-model="aspect[getFieldId(field)]" id="{{getFieldId(field)}}" name="{{getFieldId(field)}}" placeholder="{{field.defaultValue}}" />
+                <textarea ng-switch-when="textarea" type="text" ng-model="aspect[getFieldId(field)]" id="{{getFieldId(field)}}" name="{{getFieldId(field)}}" placeholder="{{field.defaultValue}}" />
+                <input ng-switch-when="number" type="number" ng-model="aspect[getFieldId(field)]" id="{{getFieldId(field)}}" name="{{getFieldId(field)}}" placeholder="{{field.defaultValue}}" />
+                <yg-date ng-switch-when="date" ng-model="aspect[getFieldId(field)]" id="{{getFieldId(field)}}" name="{{getFieldId(field)}}"></yg-date>
+                <yg-datetime ng-switch-when="datetime" ng-model="aspect[getFieldId(field)]" id="{{getFieldId(field)}}" name="{{getFieldId(field)}}"></yg-datetime>
+            </ng-switch>
         </div>
     </yg-drop-target>
 </section>
