--- a/app/views/edit-type.html
+++ b/app/views/edit-type.html
@@ -11,17 +11,10 @@
             <input type="text" id="field-name-{{$index}}" ng-model="field.name">
 
             <label for="field-type-{{$index}}">Field Type</label>
-            <select id="field-type-{{$index}}" ng-model="field.type">
-                <option>date</option>
-                <option>datetime</option>
-                <option>text</option>
-                <option>number</option>
-                <option>textarea</option>
-                <option>selection</option>
-            </select>
+            <select id="field-type-{{$index}}" ng-model="field.type" ng-options="fieldType for fieldType in type.getFieldTypes()"></select>
 
-            <label for="default-text-{{$index}}">Default Text</label>
-            <input type="text" id="default-text-{{$index}}" ng-model="field.defaultText">
+            <label for="default-text-{{$index}}">Default</label>
+            <input type="text" id="default-text-{{$index}}" ng-model="field.defaultValue">
 
             <button ng-click="deleteField(field)">x</button>
         </div>
