--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -8,7 +8,7 @@
 
         <div class="list-title">
             <h5>{{resourceBundle().EVENTS}}</h5>
-            <button>hi</button>
+            <button ng-click="newEvent()">+</button>
         </div>
         <div class="list" id="list-events">
             <div class="list-header">
@@ -17,7 +17,7 @@
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="event in events" class="event" ng-class="{selected: isSelected(event), 'selected-secondary': isSelectedSecondary(event)}" ng-click="selectElement(event)" draggable="true" yg-draggable data-yg-drag-id="{{event.id}}">
+                    <li ng-repeat="event in events" class="event" ng-class="{selected: event.isSelected(), 'selected-secondary': event.isSelectedSecondary()}" ng-click="selectElement(event)" draggable="true" yg-draggable data-yg-drag-id="{{event.id}}">
                         {{event.name}}
                     </li>
                 </ul>
@@ -26,7 +26,7 @@
 
         <div class="list-title">
             <h5>{{resourceBundle().TYPES}}</h5>
-            <button>hi</button>
+            <button ng-click="newType()">+</button>
         </div>
         <div class="list" id="list-types">
             <div class="list-header">
@@ -35,7 +35,7 @@
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="type in types" class="type" ng-class="{selected: isSelected(type), 'selected-secondary': isSelectedSecondary(type)}" ng-click="selectElement(type)" draggable="true" yg-draggable data-yg-drag-id="{{type.id}}">
+                    <li ng-repeat="type in types" class="type" ng-class="{selected: type.isSelected(), 'selected-secondary': type.isSelectedSecondary()}" ng-click="selectElement(type)" draggable="true" yg-draggable data-yg-drag-id="{{type.id}}">
                         <div ng-bind-html-unsafe="type.icon"></div>
                         <div>{{type.name}}</div>
                     </li>
@@ -45,7 +45,7 @@
 
         <div class="list-title">
             <h5>{{resourceBundle().ASPECTS}}</h5>
-            <button>hi</button>
+            <button ng-click="newAspect()">+</button>
         </div>
         <div class="list" id="list-aspects">
             <div class="list-header">
@@ -55,7 +55,7 @@
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="aspect in aspects" class="aspect" ng-class="{selected: isSelected(aspect), 'selected-secondary': isSelectedSecondary(aspect)}" ng-click="selectElement(aspect)" draggable="true" yg-draggable data-yg-drag-id="{{aspect.id}}">
+                    <li ng-repeat="aspect in aspects" class="aspect" ng-class="{selected: aspect.isSelected(), 'selected-secondary': aspect.isSelectedSecondary()}" ng-click="selectElement(aspect)" draggable="true" yg-draggable data-yg-drag-id="{{aspect.id}}">
                         <div ng-bind-html-unsafe="aspect.getType().icon"></div>
                         <div ng-bind-html-unsafe="aspect.getType().icon" ng-style="{'color': aspect.color}"></div>
                         <div>{{aspect.name}}</div>
