--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,6 +8,7 @@
 </header>
 
 <br/><br/>
+<a href="" ng-click="undo()">Undo</a>
 
 <div id="upper-container">
     <ng-include src="'views/elements-list.html'"></ng-include>
