redo, and adding sub-elements to edit

--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -337,6 +337,17 @@ h6 {
     right: 0;
 }
 
+.edit-sub-elements {
+    &.ui-accordion {
+        /*width: 50%;
+        min-width: 600px;*/
+    }
+    .ui-accordion-header {
+        background-color: @color-1;
+    }
+    /**.ui-accordion-header-active*/
+}
+
 #upper-container {
     position: absolute;
     top: 100px;
