--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,7 @@
 
 <br/><br/>
 <a href="" ng-click="undo()">Undo</a>
+<a href="" ng-click="redo()">Redo</a>
 
 <div id="upper-container">
     <ng-include src="'views/elements-list.html'"></ng-include>
