remove digest error

--- a/app/views/edit-event.html
+++ b/app/views/edit-event.html
@@ -15,10 +15,11 @@
         <div id="edit-event-aspects" class="edit-sub-elements">
             <div ng-repeat="aspect in event.getAspects()" class="edit-sub-element">
                 <div class="edit-sub-element-header">
-                    <h5>{{aspect.global.name}}</h5>
+                    <h5>{{aspect.name}}</h5>
                 </div>
                 <div class="edit-sub-element-body">
                     balloon
+                    {{event.getLocalAspectById(aspect.id).name}}
                 </div>
             </div>
         </div>
