--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -4,7 +4,7 @@
 
     </div>
 
-    <div class="section-body">
+    <div class="section-body" yg-accordion yg-accordion-header=".list-title" yg-accordion-height-style="fill">
 
         <div class="list-title">
             <h5>{{resourceBundle().EVENTS}}</h5>
