--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -364,3 +364,18 @@ h6 {
     bottom: @footer-height;
 }
 
+.sortable {
+    padding-right: 25px;
+}
+
+.asc {
+    &:after {
+        content: "^";
+    }
+}
+
+.desc {
+    &:after {
+        content: "V";
+    }
+}
