--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -11,13 +11,15 @@
             <button ng-click="newEvent()">+</button>
         </div>
         <div class="list" id="list-events">
-            <div class="list-header">
+            <div class="list-header" yg-sortable-header yg-sort-var="sortEvents" yg-sort-reverse="sortEventsReverse">
                 <div></div>
-                <div>hi there</div>
+                <yg-sortable yg-sort-property="name">{{resourceBundle().EVENTS}}</yg-sortable>
+                <yg-sortable>name</yg-sortable>
+                <yg-sortable>name</yg-sortable>
             </div>
             <div class="list-body">
                 <ul>
-                    <li ng-repeat="event in events" class="event" ng-class="{selected: event.isSelected(), 'selected-secondary': event.isSelectedSecondary()}" ng-click="selectElement(event)" draggable="true" yg-draggable data-yg-drag-id="{{event.id}}">
+                    <li ng-repeat="event in events | orderBy:sortEvents:sortEventsReverse" class="event" ng-class="{selected: event.isSelected(), 'selected-secondary': event.isSelectedSecondary()}" ng-click="selectElement(event)" draggable="true" yg-draggable data-yg-drag-id="{{event.id}}">
                         {{event.name}}
                     </li>
                 </ul>
