--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,15 +1,6 @@
-<header>
-    <h1>Logo</h1>
-    <nav>
-        <ul class="menu">
-            <li>Save</li>
-        </ul>
-    </nav>
-</header>
+<ng-include src="'views/header.html'"></ng-include>
 
 <br/><br/>
-<a href="" ng-click="undo()">Undo {{undoName()}}</a>
-<a href="" ng-click="redo()">Redo {{redoName()}}</a>
 
 <div id="upper-container">
     <ng-include src="'views/elements-list.html'"></ng-include>
