--- a/app/styles/yuga-admin.less
+++ b/app/styles/yuga-admin.less
@@ -348,11 +348,23 @@ h6 {
                     display:none;
                 }
                 &:nth-child(2) {
-                    display: table-cell;
+                    display: inline-block;
                 }
             }
         }
     }
+}
+
+.sortable {
+    /*padding-right: 25px;*/
+}
+
+.asc {
+
+}
+
+.desc {
+
 }
 
 /** */
@@ -392,17 +404,6 @@ h6 {
     bottom: @footer-height;
 }
 
-.sortable {
-    /*padding-right: 25px;*/
-}
-
-.asc {
-
-}
-
-.desc {
-
-}
 
 .dropdown-toggle {
     cursor: pointer;
@@ -427,3 +428,75 @@ h6 {
         }
     }
 }
+
+.dropdown-submenu {
+    position:relative;
+
+    & > .dropdown-menu {
+        top:0;
+        left:100%;
+        margin-top:-6px;
+        margin-left:-1px;
+        -webkit-border-radius:0 6px 6px 6px;
+        -moz-border-radius:0 6px 6px 6px;
+        border-radius:0 6px 6px 6px;
+    }
+
+    &:hover {
+        & > .dropdown-menu {
+            display:block;
+        }
+
+        & > a {
+            &:after {
+                border-left-color:#ffffff;
+            }
+        }
+    }
+
+    & > a {
+        &:after {
+            display:block;
+            content:" ";
+            float:right;
+            width:0;
+            height:0;
+            border-color:transparent;
+            border-style:solid;
+            border-width:5px 0 5px 5px;
+            border-left-color:#cccccc;
+            margin-top:5px;
+            margin-right:-10px;
+         }
+    }
+ }
+
+/*
+.dropdown-submenu.pull-left{float:none;}
+.dropdown-submenu.pull-left>.dropdown-menu{left:-100%;margin-left:10px;-webkit-border-radius:6px 0 6px 6px;-moz-border-radius:6px 0 6px 6px;border-radius:6px 0 6px 6px;}*/
+
+
+/* ************************************************************** */
+/* CUSTOM WEBKIT SCROLLBAR */
+/* ************************************************************** */
+::-webkit-scrollbar {
+    width: 5px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    /*-webkit-border-radius: 2px;
+    border-radius: 2px;*/
+    background: #fff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    /*-webkit-border-radius: 2px;
+    border-radius: 2px;*/
+    background: #999;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4);
+}
+
+/** END WEBKIT SCROLLBAR */
