--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,4 +1,4 @@
-<header>
+<header ng-controller="HeaderCtrl">
     <h1>Logo</h1>
     <nav>
         <div class="dropdown" id="file-menu">
@@ -14,6 +14,14 @@
                 <li ng-class="{disabled: !canUndo()}"><a href="" tabindex="-1" ng-click="undo()">Undo {{undoName()}}</a></li>
                 <li ng-class="{disabled: !canRedo()}"><a href="" tabindex="-1" ng-click="redo()">Redo {{redoName()}}</a><li>
                 <li class="divider"></li>
+                <li class="dropdown-submenu">
+                    <a tabindex="-1" href="#">New</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="" tabindex="-1" ng-click="newEvent()">Event</a><li>
+                        <li><a href="" tabindex="-1" ng-click="newType()">Type</a><li>
+                        <li><a href="" tabindex="-1" ng-click="newAspect()">Aspect</a><li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </nav>
