--- a/app/views/elements-list.html
+++ b/app/views/elements-list.html
@@ -66,7 +66,7 @@
                 <ul>
                     <li ng-repeat="aspect in aspects" class="aspect" ng-class="{selected: aspect.isSelected(), 'selected-secondary': aspect.isSelectedSecondary()}" ng-click="selectElement(aspect)" draggable="true" yg-draggable data-yg-drag-id="{{aspect.id}}">
                         <div ng-bind-html-unsafe="aspect.getType().icon"></div>
-                        <div ng-bind-html-unsafe="aspect.getType().icon" ng-style="{'color': aspect.color}"></div>
+                        <div ng-bind-html-unsafe="aspect.getType().icon" ng-style="{'color': '#' + aspect.color}"></div>
                         <div>{{aspect.name}}</div>
                     </li>
                 </ul>
